<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/colorPrimary"
    android:paddingBottom="@dimen/activity_bottom_margin"
    android:paddingTop="@dimen/activity_top_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="justbe.mindfulness.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:id="@+id/weekdaysLayout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="50dp"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/Meditation0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="changeWeekdayButtonPressed"
            android:orientation="vertical">

            <TextView
                android:id="@+id/MeditationText0"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".8"
                android:gravity="center"
                android:text="@string/su_text"
                android:textColor="@color/transparentLightGreen"
                android:textSize="@dimen/normal_text_size" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/transparentLightGreen"
                android:gravity="center">

                <ImageView
                    android:id="@+id/MeditationImage0"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/check_gray_2x"
                    android:tag="false" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Meditation1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="changeWeekdayButtonPressed"
            android:orientation="vertical">

            <TextView
                android:id="@+id/MeditationText1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".8"
                android:gravity="center"
                android:text="@string/m_text"
                android:textColor="@color/transparentLightGreen"
                android:textSize="@dimen/normal_text_size" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/transparentLightGreen"
                android:gravity="center">

                <ImageView
                    android:id="@+id/MeditationImage1"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/check_gray_2x"
                    android:tag="false" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Meditation2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="changeWeekdayButtonPressed"
            android:orientation="vertical">

            <TextView
                android:id="@+id/MeditationText2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".8"
                android:gravity="center"
                android:text="@string/t_text"
                android:textColor="@color/transparentLightGreen"
                android:textSize="@dimen/normal_text_size" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/transparentLightGreen"
                android:gravity="center">

                <ImageView
                    android:id="@+id/MeditationImage2"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/check_gray_2x"
                    android:tag="false" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Meditation3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="changeWeekdayButtonPressed"
            android:orientation="vertical">

            <TextView
                android:id="@+id/MeditationText3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".8"
                android:gravity="center"
                android:text="@string/w_text"
                android:textColor="@color/transparentLightGreen"
                android:textSize="@dimen/normal_text_size" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/transparentLightGreen"
                android:gravity="center">

                <ImageView
                    android:id="@+id/MeditationImage3"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/check_gray_2x"
                    android:tag="false" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Meditation4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="changeWeekdayButtonPressed"
            android:orientation="vertical">

            <TextView
                android:id="@+id/MeditationText4"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".8"
                android:gravity="center"
                android:text="@string/th_text"
                android:textColor="@color/transparentLightGreen"
                android:textSize="@dimen/normal_text_size" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/transparentLightGreen"
                android:gravity="center">

                <ImageView
                    android:id="@+id/MeditationImage4"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/check_gray_2x"
                    android:tag="false" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Meditation5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="changeWeekdayButtonPressed"
            android:orientation="vertical">

            <TextView
                android:id="@+id/MeditationText5"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".8"
                android:gravity="center"
                android:text="@string/f_text"
                android:textColor="@color/transparentLightGreen"
                android:textSize="@dimen/normal_text_size" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/transparentLightGreen"
                android:gravity="center">

                <ImageView
                    android:id="@+id/MeditationImage5"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/check_gray_2x"
                    android:tag="false" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Meditation6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="changeWeekdayButtonPressed"
            android:orientation="vertical">

            <TextView
                android:id="@+id/MeditationText6"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".8"
                android:gravity="center"
                android:text="@string/s_text"
                android:textColor="@color/transparentLightGreen"
                android:textSize="@dimen/normal_text_size" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/transparentLightGreen"
                android:gravity="center">

                <ImageView
                    android:id="@+id/MeditationImage6"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/check_gray_2x"
                    android:tag="false" />
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/audioPlayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/weeklyLessonButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/weekdaysLayout"
        android:layout_marginBottom="95dp"
        android:layout_marginTop="25dp"
        android:background="@color/orange">

        <SeekBar
            android:id="@+id/volumeBar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="10dp"
            android:progress="30" />

        <TextView
            android:id="@+id/currentTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/volumeBar"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:text="@string/start"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/totalTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/volumeBar"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:text="@string/end"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </RelativeLayout>

    <!--android:layout_marginTop="25dp"-->
    <TextView
        android:id="@+id/MeditationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/weeklyLessonButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="61dp"
        android:gravity="bottom|center_horizontal"
        android:text="@string/meditation"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/bpWhite" />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/weeklyLessonButton"
        style="@android:style/Widget.Button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/lessons_button_selector"
        android:clickable="true"
        android:onClick="lessonButtonPressed">

        <ImageView
            android:id="@+id/weeklyLessonButtonImage"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:src="@drawable/check_gray_2x"
            android:tag="false" />

        <TextView
            android:id="@+id/weeklyLessonButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/weeklyLessonButtonImage"
            android:text=""
            android:textColor="@color/bpWhite"
            android:textSize="@dimen/normal_text_size" />
    </RelativeLayout>

    <ImageButton
        android:id="@+id/audioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/audioPlayer"
        android:layout_centerHorizontal="true"
        android:background="@color/bpTransparent"
        android:onClick="audioButtonPressed"
        android:paddingTop="15dp"
        android:src="@drawable/play" />

</RelativeLayout>