...
    <string name="setup">Setup</string>
    <string name="pendingMorning">Pending Morning Assessment</string>
    <string name="pendingAfternoon">Pending Afternoon Assessment</string>
    <string name="timeForAssessment">It\'s time for a momentary evaluation!</string>
    <string name="readyToStartAssesssment">Are you ready to start the assessment?</string>

    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="confim_password_text">Confirm Password</string>
    <string name="new_password_text">New Password</string>
    <string name="confim_new_password_text">Confirm New Password</string>
    <string name="email_text">Email</string>
    <string name="first_name_text">First Name</string>
...
    <string name="loggingOut">Logging Out</string>
    <string name="pleaseWait">Please wait...</string>
    <string name="resarch_study">Are you part of the research study?</string>
    <string name="resarch_study_info">Note: \nIf you choose to be part of research study, only then you will be receiving notifications for Daily Assessments.</string>


    <string name="title_activity_preferences">Preferences</string>
    <string name="meditations_text">Meditation Time</string>
    <string name="meditation">Meditation</string>>
    <string name="lessons_text">Lessons Time</string>
    <string name="lessons_day_text">Lessons Day</string>
    <string name="meditations_text_create_account">What time do you want to meditate daily?</string>
    <string name="lessons_text_create_account">What time on that day would you like to receive the lesson?</string>
    <string name="lessons_day_text_create_account">What day would you like to receive your weekly lesson?</string>

    <string name="title_activity_lesson">Weekly Lesson</string>
    <string name="title_activity_assessment">Assessment</string>
    <string name="epilogue">Thank you.</string>


    <string name="start">Start</string>
    <string name="end">End</string>
...
    <string name="week_three_text">Week 3</string>
    <string name="week_four_text">Week 4</string>
    <string name="week_five_text">Week 5</string>
    <string name="week_six_text">Week 6</string>
    <string name="week_seven_text">Week 7</string>
    <string name="week_eight_text">Week 8</string>
    <string name="this_week_text">This Week</string>

    <string name="su_text">SU</string>
    <string name="m_text">M</string>
    <string name="t_text">T</string>
    <string name="th_text">TH</string>
    <string name="w_text">W</string>
...
