<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="10dp">
    <!-- TODO: Change this to center vertically -->
    <ImageButton
        android:id="@+id/weekButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:background="@color/bpTransparent"
        android:onClick="weekButtonPressed"
        android:scaleType="centerInside"
        android:src="@drawable/calendar_button_selector" />

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:scaleType="centerInside"
        android:src="@drawable/lotus_2x" />
    <!-- TODO: Change this to center vertically -->
    <ImageButton
        android:id="@+id/preferencesButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:background="@color/bpTransparent"
        android:onClick="preferencesButtonPressed"
        android:scaleType="centerInside"
        android:src="@drawable/preferences_button_selector" />
</RelativeLayout>